--- a/Presentation/HepsiApi.WebApi/HepsiApi.WebApi.csproj
+++ b/Presentation/HepsiApi.WebApi/HepsiApi.WebApi.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>1eb6a9b5-352f-4be2-bb76-a8b23333ae43</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
