--- a/Presentation/HepsiApi.WebApi/HepsiApi.WebApi.csproj
+++ b/Presentation/HepsiApi.WebApi/HepsiApi.WebApi.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\HepsiApi.Application\HepsiApi.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\HepsiApi.Persistence\HepsiApi.Persistence.csproj" />
   </ItemGroup>
 
