--- a/Core/HepsiApi.Application/HepsiApi.Application.csproj
+++ b/Core/HepsiApi.Application/HepsiApi.Application.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SendGrid" Version="9.29.1" />
   </ItemGroup>
 
   <ItemGroup>
